# Gaussian-Splatting-3D-Renderer

./: .gitmodules  CMakeLists.txt  Makefile  README.md
res/: CREDITS.txt
res/shaders/: gaussian.frag  gaussian.vert  radix_sort.comp  z_keygen.comp
src/: gamelogic.cpp  gamelogic.h  gaussian.hpp  main.cpp  program.cpp  program.hpp
src/utilities/: camera.hpp  glfont.cpp  glutils.cpp  glutils.h  mesh.h  radix_sort.cpp  radix_sort.hpp  window.hpp
